Updated more Darkwood quest

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -1434,7 +1434,7 @@
                 </div>
               </div>
               <!-- End of Loyal -->
-              <div class="line"></div
+              <div class="line"></div>
               <!-- Start of Riddles  -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
@@ -1482,13 +1482,20 @@
                     <hr>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/Darkwoods/Riddles_Rydyl.png" alt="Rydyl"> 
-                        Speak to <span class="light-red">Rydyl</span>, Hello! Did you see any spiders on the way in? There are a lot of spiders around here. They're creepy! Would you like to hear my riddle? <span class="light-green">Yes, please, I'd love to!</span> Stronger than steel, Lighter than air; Stolen from monsters to make elves fair. What am I?
-                        Bring me the answer, and I'll give you a prize!
+                        Speak to <span class="light-red">Rydyl:</span> Hello! Did you see any spiders on the way in? There are a lot of spiders around here. They're creepy! Would you like to hear my riddle? 
+                        <br>
+                        <span class="green">Player</span><span class="player-text-color"> Please, I'd love to!</span>
+                        <br>
+                        <span class="light-red">Rydyl:</span> Stronger than steel, Lighter than air; Stolen from monsters to make elves fair. What am I? Bring me the answer, and I'll give you a prize! <span class="orange">*Rydyl runs away giggling*</span>
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Riddles</span><span class="orange">, Rydyl of Autumn will give you a prize if you solve his riddle.</span>
-                        <br>
+                    </p>
+                    <hr>
+                    <p>    
                         The answer to the riddle is <span class="light-green">Raw Silk. </span> <img class="" src="Images/Darkwoods/Riddles_Raw_Silk.png" alt="Raw Silk">You can buy from a store or kill the <span class="red">Black Widow Hatchling</span> in the area.                   
-                        When you take the Raw Silk to Rydyl you must drag and drop the Raw Silk on him. If you talk to him he will tell you the riddle again. You found the key to the riddle! Now you get Rydyl's key lime! <span class="orange">*Rydyl tosses you a lime, giggles and runs away*</span>
+                        When you take the Raw Silk to Rydyl you must drag and drop the Raw Silk on him. If you talk to him he will tell you the riddle again. 
+                        <br>
+                        <span class="light-red">Rydyl:</span> You found the key to the riddle! Now you get Rydyl's key lime! <span class="orange">*Rydyl tosses you a lime, giggles and runs away*</span>
                         <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Lime</span></li>
