Started the Patch Update

--- a/index.html
+++ b/index.html
@@ -218,7 +218,39 @@
             <p>All Ashen Empires patch notes information comes from the <a href="https://discord.gg/9pCUs9G" class="a-bottom-border" target="_blank">Discord Server</a></p>
             
 
-
+            div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 9/21/2022</small>
+              <p>
+                Lots of small adjusts to armor to help balance progression for the 30-100 range, focusing on patron, warloard, and crafted sets, mage staves, mage gear, and crafting gear. We also cleaned up various bugs; high points there would be follower markers and druid staff followers. See below for details. Thanks, and happy hunting!
+              </p>
+              ===System===
+              <ul>
+                <li>Adjust to alignment loss when killing players</li>
+                <li>expansion of the profanity filter</li>
+                <li>Adjusted PvP mitigation to give bonus mitigation to a lower level vs a higher level in PvP.</li>
+                <li>fix for client selecting an unsupported resolution by default</li>
+                <li>Hot bars greying out</li>
+                <li>Add warning to account linking popup and confirmation page about possibility to lose characters</li>
+              </ul>              
+              ===Creatures===
+              <ul>
+                <li>Inc # of attacks on Kritan, Lord pallus, northern FG Noble to 2</li>
+                <li>Adjusted spawn of orc foragers; removed other mob and added more spawns</li>
+                <li>Artraxis and Kritan given nature resistance</li>
+                <li>Adjusted spawns on WWI - bumped werewolves and matriarchs, removed ghost willows</li>
+                <li>Inc spawn of hell hounds on scorched island</li>
+                <li>Adjusted Town Guardian min/max damage, enemy mitigation down some</li>
+              </ul>
+              ===Drops===
+              <ul>
+                <li>Slightly boosted drop rates of Totem of the Wolf on the mobs that have it as a solo drop chance</li>
+              </ul>
+              ===Items===
+              <ul>
+                
+              </ul>
+            </article>
             <div class="body-line"></div>
             <article>
               <small class="article-date">FujiQ 9/8/2022</small>
