Corrected an error

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <p>All Ashen Empires patch notes information comes from the <a href="https://discord.gg/9pCUs9G" class="a-bottom-border" target="_blank">Discord Server</a></p>
             
 
-            div class="body-line"></div>
+            <div class="body-line"></div>
             <article>
               <small class="article-date">FujiQ 9/21/2022</small>
               <p>
