Added new Patch notes

--- a/index.html
+++ b/index.html
@@ -218,7 +218,81 @@
             <p>All Ashen Empires patch notes information comes from the <a href="https://discord.gg/9pCUs9G" class="a-bottom-border" target="_blank">Discord Server</a></p>
             
 
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 10/14/2022</small>
+              <p>
+               Happy Halloween!!!
+              </p>
+              <p>
+                This patch primarily is an update for the halloween event which will start Friday Oct 14th, but there are some minor fixes and quality of life adjusts based on feedback fro the last few weeks. the halloween event is a FREE event that can be enjoyed by levels 20/30 -110.
+              </p>
+             ===Halloween Event===
+             <ul>
+              <li>Three new items to trade for candy corn: </li>
+                <ul>
+                  <li>Cavendish's Cauldron (128 slot 65% reduction container or 20k candy corn</li>
+                  <li>Army of Pumpkins Totem (req level 70 and 30 leadership to summon 3 rollin pumpkin slaves)</li>
+                  <li>Haunted hollows totem (req level 30 and 10 leadership to summon 1 spooky tree)</li>
+                </ul>
+                <li>Fix for those who exit dungeon with a stone or scroll who would not be able to transform using mask etc without relog</li>
+                <li>Dungeon is now accessible in PARIAN graveyard (south) and is a safe zone.</li>
+                <li>Added corpses for moldy mummy and spooky tree</li>
+                <li>All event mobs that drop candy corn in Halloween dungeon will kill followers</li>
+                <li>Adjusted drops of candy corn from event mobs (higher level drop more, lower level drop less generously)</li>
+                <li>Added "EVENT ITEM" tag to Halloween goodies</li>
+                <li>New fun particle on item Frightful Cloak (in backpack/player screen only)</li>
+             </ul>
+             ===Creatures===
+             <ul>
+              <li>Meklor now will not spawn into the dungeon areas/become unattackable</li>
+              <li>Adjusted stats and spawn of greater skeles as they are a bit too attractive of leveling option atm</li>
+             </ul>
+             ===Spells===
+             <ul>
+              <li>Summon Spectre now requires level 60 soul only (no leadership; pet based on player level)</li>
+              <li>Brilliance now lasts duration stated in spellbook instead of 30 min</li>
+              <li>Removed extra time to cast on Bulwark might (was slightly longer than any other spell in its class due to this and making it awkward when spells wear off at varying times)</li>
+              <li>Misery will give exp when cast on NPCs</li>
+             </ul>
+             ===Items===
+             <ul>
+              <li>Added CON to Evil Council robe to match its non-event counterpart</li>
+              <li>Razor Sharp Basilisk tooth stores charge on weapon misc field now instead of target, weight reduced to 4 from 8</li>
+              <li>Added bonus damage to Dirk of the Unleashed, Edge of the Slayer, and sword of Artraxis to make them more interesting choice than they currently are</li>
+             </ul>
+             ===Quest===
+             <ul>
+              <li>Removed lich apprentices and ww sires from LK/CK</li>
+              <li>Franklin Anders should no longer take all potions given to him, just 1, but i mean he could use them so fine whatever be greedy</li>
+              <li>Added fail confirmation to Shargar cult kill quest if killing cultists outside of the area near Dawat</li>
+              <li>Removed duplicate quest print in Franklin Anders</li>
+             </ul>
+             ===Map==
+             <ul>
+              <li>Removed safe zone from Proudblood portal</li>
+              <li>Adjusted level of guards in the guard outpost between Duremar and Farstead Keep and the Astari outpost north of necropolis, fixed them to be neutral alignment</li>
+              <li>Fix for leaving Meklor's room and having spawn point reset/invalid</li>
+              <li>Removed rug in Indoel's room which was causing corpse layering issues, replaced with red tiles and cleaned up the area of snow/cobblestones overlapping it with some smaller tiles</li>
+              <li>Parian set to neutral. Too many quests and other things tied there to be divine, and it fits the lore for that city.</li>
+              <li>Added script to WW Mat summon to make sure it's not pulling players into swamp tile where they can't walk</li>
+             </ul>
+             ===Skills===
+             <ul>
+              <li>Adjusted down the exp given on a few chainmail pieces for forging, was set to more of a 50 skill instead of 2-10 skill level reward</li>
+              <li>Materials made of magic wood will salvage back into enchanted planks rather than fine planks</li>
+              <li>Removed material for legacy cloak (could be salvaged for infinite malacinth)</li>
+             </ul>
+             ===Misc===
+             <ul>
+              <li>Fixed Chaos Portal (was allowing you through if you didn't pay 25k gold)</li>
+              <li>Tarvan will no longer go to Valmond but to Chlera</li>
+              <li>Added mage of Lotor to Redwake give legacy cloak for the people who have chosen a life of evil deeds, innocent newbs murdered in cold blood, and so on</li>
+              <li>VIP soulstone cooldown cut to 30 min</li>
+              <li>Added wanted flag to players who harm other players with incendiary powders/explosive powder</li>
+             </ul>
 
+            </article>
             <div class="body-line"></div>
             <article>
               <small class="article-date">Burning Spear 9/29/2022</small>
@@ -3915,9 +3989,9 @@
                       <div id="october2022" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>1 Item Restoration Pack</li>
+                                <li>2 Summon Corpse</li>
+                                <li>4 Personal Power Hour</li>
                             </ul>
                         </div>
                       </div>
