--- a/silvestValley.html
+++ b/silvestValley.html
@@ -1641,7 +1641,7 @@
                           <img class="npc-img img-map-height" src="Images/SilvestValley/For_Those_Who_Are_Brave_Silvest_Mine.png" alt="Silvest Mine"> 
                           <img class="monster-img" src="Images/NPC/Monsters/Skeleton_Warrior.png" alt="Skeleton Warrior"> 
                           <br>
-                         Go north to the Silvest mines. There are <span class="light-red">Skeleton_Warriors</span> you will have to confront. Follow the map to find the location of Struglar. Struglar has been killed and you find his remains. <img class="monster-img" src="Images/SilvestValley/For_Those_Who_Are_Brave_Struglar_Dead_Body.png" alt="Struglar Dead Body"> 
+                         Go north to the Silvest mines. There are <span class="light-red">Skeleton Warriors</span> you will have to confront. Follow the map to find the location of Struglar. Struglar has been killed and you find his remains. <img class="monster-img" src="Images/SilvestValley/For_Those_Who_Are_Brave_Struglar_Dead_Body.png" alt="Struglar Dead Body"> 
                          <br>
                          <span class="green">This is the body of Struglar, the father of William. You realize you must inform William of the bad news.</span>
                          <br>
