Added 10-21-22 patch notes

--- a/index.html
+++ b/index.html
@@ -218,6 +218,112 @@
             <p>All Ashen Empires patch notes information comes from the <a href="https://discord.gg/9pCUs9G" class="a-bottom-border" target="_blank">Discord Server</a></p>
             
 
+
+
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 10/21/2022</small>
+              <p>
+               A small patch to further refine the Halloween event for more fun! Remember this event is onpen through the end of October untill All Saint's Day on NOV 1st. Candy Corn can be saved for next year as well.
+              </p>
+              <p>
+                Another adjust in this patch worth nothing is the change to the stats and spawns of a large chunk of mobs in the 50-100 range to give more spots to level for various weapon skills. many creatures that previously did not have a weakness now have a variety of weaknesses to help spread leveling away from one location.
+              </p>
+              ===Halloween Event===
+              <ul>
+                <li>Removed normal mobs (vampire bat, ghost) from Halloween dungeon</li>
+                <li>Bumped drops of candy corn on some event mobs - black cats in particular</li>
+                <li>Great Pumpkin is hate drop Encounter (not party drop rules)</li>
+                <li>Reworked Halloween dungeon to take care of a few cheesy exploits; removed columns and decorative pumpkin in boss room (could get stuck there, lame!)</li>
+                <li>Adjusted dungeon that passed close to pumpkin collector's corner of dungeon entrance; players could stand there and collect candy passively somehow</li>
+                <li>Removed ability to summon followers inside the Halloween Dungeon</li>
+                <li>Adjusted Halloween encounters to match the new dungeon layout</li>
+              </ul>
+              ===Creatures===
+              <ul>
+                <li>Adjust to greater skele stats</li>
+                <li>Adjusted weaknesses/resistances of the following creatures; creature groups have similar weaknesses/resists varying by level/difficulty and some variance within. To save you time, I have included a GENERAL guide. There is some variability; check creature stats before deciding what to hunt.</li>
+                <ul>
+                  <li><u>Giants</u><br>(resist Body/Nature, weak to Cut/Arrow)</li>
+                  <ul>
+                    <li>Sickly Troll</li>
+                    <li>Minor Storm Giant</li>
+                    <li>Storm Giant</li>
+                    <li>Frost Giant</li>
+                    <li>Stone Giant</li>
+                    <li>Rock Troll</li>
+                    <li>Storm Giant Elite</li>
+                    <li>Crystal Golem</li>
+                  </ul>
+                  <li><u>Demons</u><br>(resist Arrow/Soul, Weak to Cut/Nature)</li>
+                  <ul>
+                    <li>Imp</li>
+                    <li>Deadwillow</li>
+                    <li>Floating Horror</li>
+                    <li>Chiromorph</li>
+                    <li>Horned Devil</li>
+                    <li>Death Tyrant</li>
+                    <li>Eye of Valekar</li>
+                  </ul>
+                  <li><U>Undead</U><br>(resist Mind/Arrow, weak to Blunt/Body</li>
+                  <ul>
+                    <li>Undead Priest</li>
+                    <li>Ghost Willow</li>
+                    <li>Wraith</li>
+                    <li>Spect. Horned Bers</li>
+                    <li>Lich</li>
+                    <li>Lich Apprentice</li>
+                    <li>Greater Skeleton</li>
+                    <li>Diseased Ghoul</li>
+                    <li>Spectral General</li>
+                    <li>Spectral Destroyer</li>
+                    <li>Spectral Demon Ov.</li>
+                  </ul>
+                  <li><u>Humanoids</u><br>(Resist Body/Mind, weak to Pierce/Soul/Magic Missile</li>
+                  <ul>
+                    <li>Glutton</li>
+                    <li>Minotaur</li>
+                    <li>Hunter</li>
+                    <li>Elite Fighter</li>
+                  </ul>
+                  <li><u>Fungoids</u><br>(resist Nature/Cut, weak to Pierce/Mind</li>
+                  <ul>
+                    <li>Fungoid Minion</li>
+                    <li>Undead Fungoid W</li>
+                    <li>Fungoid</li>
+                    <li>Undead Fungoid</li>
+                    <li>Fungoid Warrior</li>
+                    <li>Fungoid Wizard</li>
+                    <li>Poisonous Fungoid</li>
+                  </ul>
+                  <li><u>Animals</u><br>(resist Nature, weak to Arrow)</li>
+                  <ul>
+                    <li>Dire Wolf</li>
+                    <li>Eire Wolf Leader</li>
+                    <li>Polar Bear</li>
+                  </ul>
+                </ul>
+              </ul>
+              ===Spawns===
+              <ul>
+                <li>To go with creature stat adjusts, we have also adjusted several mid level spawn areas, typically cleaning up the mobs that do not work in these areas, inc respawn time, adding some more spawn areas</li>
+                <li>Fungoid cave (more structured throughout, bigger spawn)</li>
+                <li>Valley of Giants (more giants, be careful! Storm Giant Elites the premier mob here)</li>
+                <li>New Korelth (less of a mixed spawn, more difficult mobs within; Horned Devils the premier mob here</li>
+                <li>Deadwillows North of Chlera</li>
+              </ul>
+              ===Items===
+              <ul>
+                <li>Added rune slots to Runed Oak Bow and Oak Bow of Spirit (up to 5/4 respectively from 4/2)</li>
+                <li>Added oak bow of spirit and runed oak bow to some drop tables</li>
+                <li>Added WWT to Lords. All Werewolves but pups drop the totem now.</li>
+              </ul>
+              ===Misc===
+              <ul>
+                <li>Missing warning print on event totems when lacking leadership requirements</li>
+                <li>Pallus should be spawning again as expected in his throne room</li>
+              </ul>
+            </article>
             <div class="body-line"></div>
             <article>
               <small class="article-date">FujiQ 10/14/2022</small>
