fixed a few problems

--- a/silvestValley.html
+++ b/silvestValley.html
@@ -475,7 +475,7 @@
                     <p> 
                       Travel out the west side of silvest to head to Varg.
                       <br> 
-                      <img class="monster-img" src="Images/SilvestValley/Knight_of_Silvest_Lady_Aelfwyn.png" alt="Lady Aelfwyn">
+                      <img class="npc-img" src="Images/SilvestValley/Knight_of_Silvest_Lady_Aelfwyn.png" alt="Lady Aelfwyn">
                       Speak to <span class="light-red">Lady Aelfwyn</span>.
                       <br>
                       <span class="light-red">Lady Aelfwyn: </span> Greetings loyal warrior of Aelfwyn... Honored servant. Here is your reward for your loyal patronage. Continue to serve...
@@ -1556,7 +1556,7 @@
 
                       <img class="npc-img img-map-height" src="Images/SilvestValley/Of_Kobold_Krazak_Cove.png" alt="Krazak Cove">
                       Leave the cave head south to Fort Eastwatch, from there follow the coast north to reach Kavic Cove. In Kavic Cove you will find a samll building with a ladder this is your entrance to the Silvest Mines.
-                      Head west till you get to a stone structured area with a ladder to go up in to the Kobold Fort. In the fort head west, then south, back to the east, enter the door then north to find the <span class="light-red">King Kobold </span> <img class="monster-img" src="Images/NPC/Boss/King_Kobold.png" alt="King Kobold"> </span> <img src="Images/NPC/Boss/King_Kobold_Stats.png" alt="King Kobold"> 
+                      Head west till you get to a stone structured area with a ladder to go up in to the Kobold Fort. In the fort head west, then south, back to the east, enter the door then north to find the <span class="light-red">King Kobold </span> <img class="monster-img" src="Images/NPC/Boss/King_Kobold.png" alt="King Kobold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Boss/King_Kobold_Stats.png' alt='King Kobold Stats'>"> 
                       Kill him and be updated to return to Galen for your reward.
                     <br>
                       <span class="green">QUEST UPDATE: King Kobold killed. Return to Galen</span>
@@ -1641,7 +1641,7 @@
                           <img class="npc-img img-map-height" src="Images/SilvestValley/For_Those_Who_Are_Brave_Silvest_Mine.png" alt="Silvest Mine"> 
                           <img class="monster-img" src="Images/NPC/Monsters/Skeleton_Warrior.png" alt="Skeleton Warrior"> 
                           <br>
-                         Go north to the Silvest mines. There are <span class="light-red">Skeleton Warriors</span> you will have to confront. Follow the map to find the location of Struglar. Struglar has been killed and you find his remains. <img class="monster-img" src="Images/SilvestValley/For_Those_Who_Are_Brave_Struglar_Dead_Body.png" alt="Struglar Dead Body"> 
+                         Go north to the Silvest mines. There are <span class="light-red">Skeleton Warriors</span> you will have to confront. Follow the map to find the location of Struglar. Struglar has been killed and you find his remains. <img class="npc-img" src="Images/SilvestValley/For_Those_Who_Are_Brave_Struglar_Dead_Body.png" alt="Struglar Dead Body"> 
                          <br>
                          <span class="green">This is the body of Struglar, the father of William. You realize you must inform William of the bad news.</span>
                          <br>
