Completed Dalvons Undead Quest

--- a/silvestValley.html
+++ b/silvestValley.html
@@ -98,6 +98,9 @@
                   <li>
                     <a href="#gemThieves">Gem Thieves</a>
                 </li>
+                <li>
+                  <a href="#dalvonsUndead">Dalvons Undead</a>
+              </li>
                   </ul>
                 </li>
                 <li>
@@ -185,6 +188,7 @@
                           <ul class="menu-submenu accordion-content">
                              <li><a class="head" href="#supplyProblems">Supply Problems</a></li>
                              <li><a class="head" href="#gemThieves">Gem Thieves</a></li>
+                             <li><a class="head" href="#dalvonsUndead">Dalvons Undead</a></li>
                           </ul>
                          <!-- menu-submenu accordon-content-->
                          <li id="nav6" class="toggle accordion-toggle"> 
@@ -320,6 +324,10 @@
                   <div>
                     <p><a href="#gemThieves"><span class="num-color-teal">14.</span> Dalvon Miner</a></p>
                     <img class="npc-img" src="Images/Krythan/Gem_Thieves_Dalvon_Miner.png" alt="Dalvon Miner">  
+                  </div>
+                  <div>
+                    <p><a href="#dalvonsUndead"><span class="num-color-teal">15.</span> Father Augustan</a></p>
+                    <img class="npc-img" src="Images/Krythan/Dalvons_Undead_Father_Augustan.png" alt="Father Augustan">  
                   </div>
 
                 </div> 
@@ -1908,7 +1916,86 @@
               </div>
               <!-- End of Gem Thieves -->
               <div class="line"></div>
+              <!-- Start of Dalvon's Undead  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="dalvonsUndead" class="anchor text-center">Dalvon's Undead</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        <tr>
+                          <td>Krythan</td>
+                          <td>Eastwatch</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Father Augustan
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Krythan/Dalvons_Undead_Eastwatch_Holy_Relic.png" alt="Eastwatch Holy Relic" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Dalvons_Undead_Eastwatch_Holy_Relic_Stats.png' alt='Eastwatch Holy Relic Stats'>">
+                          </td>                        
+                    </table>
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Krythan/Dalvons_Undead_Father_Augustan.png" alt="Father Augustan"> 
+                        Speak to <span class="light-red">Father Augustan:</span> The dead have risen! Agon surely is behind this! For all that is good the undead must be returned to the underworld! Near the Dalvon mine is a small, abandoned village. Go there and banish the ghosts that haunt that place!
+                        <br>
+                        <span class="green">Player:</span><span class="player-text-color"> This evil must be stopped!</span> 
+                        <span class="light-red">Father Augustan:</span> <span class="orange"> *He slaps you on the back*</span> A more noble lad you are than most.
 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Dalvon's Undead</span><span class="orange">, banish 75 Ghost near the Dalvon Mine, south of Fort Eastwatch.</span>
+                        <hr>
+                      </p>
+                    <p class="clearfix">
+                          <img class="monster-img" src="Images/NPC/Monsters/Ghost.png" alt="Ghost" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Ghost_Stats.png' alt='Ghost Stats'>">
+                          Head south to the dalvon's mine and kill <span class="red">Ghost</span> around the entrance. As you kill them you will be updated <span class="green">QUEST UPDATE: You have banished 75 Ghost for Father Augustan!</span>
+                          <br>
+                          <span class="green">QUEST RECEIVED:</span><span class="red"> Dalvon's Undead</span><span class="orange">, Return to Father Augustan in Eastwatch to collect your reward! .</span>
+                    </p>
+                    <p>
+                      <span class="light-red">Father Augustan:</span> The light be praised! Take this holy relic as a reward! 
+                    </p>
+                    
+                      <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Eastwatch Holy Relic</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">60,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>                         
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                     You have banished the undead from Dalvon.                   
+                  </div>
+                </div>
+              </div>
+              <!-- End of Dalvon's Undead -->
+              <div class="line"></div>
 
               <!-- Start of The Wisdom of Wizards -->
               <div class="card bg-main half-width mb-5">
