Added new Images of Krog Armor

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -429,7 +429,8 @@
                     <hr>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/BlackSwamp/Warrior_of_Krog_Targon.png" alt="Targon">
-                        Speak to <span class="light-red">Targon</span>; If you wish to speak with me, go align yourself with our cause! The <span class="light-red">Krog Steward</span> is always found by the spawn gates and will gladly take your name. <img class="monster-img" src="Images/BlackSwamp/Warrior_of_Krog_Krog_Steward.png" alt="Krog Steward"> Welcome to Krog! You made a good choice to start here. Me Steward, Steward of this city.
+                        <img class="npc-img" src="Images/BlackSwamp/Warrior_of_Krog_Krog_Steward.png" alt="Krog Steward">
+                        Speak to <span class="light-red">Targon</span>; If you wish to speak with me, go align yourself with our cause! The <span class="light-red">Krog Steward</span> is always found by the spawn gates and will gladly take your name.  Welcome to Krog! You made a good choice to start here. Me Steward, Steward of this city.
                         Watch over people and help them. Orcs are brave...too brave, maybe. Most have left on journeys outside the city. None left to protect us from bad things. You! You look srong, and brave. Will you join Krog, and help? The stinking humans and elves probably try to recruit you, too, but Krog is the best to choose! If you join Krog, you will be stronger with 1 extra orb of Strength. Your strength will be able to reach 101.
                         Once you make a choice, you cannot change your mind. Choose wisely... Will you join us? When you chose Krog you will be rewared. 
                         
