Updated patch notes

--- a/index.html
+++ b/index.html
@@ -222,6 +222,58 @@
 
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 10/29/2022</small>
+              <p>
+                A small patch to correct the issue with the Great Pumpkin's drop rules that crashed the server, plus some adjusts to level requirements of some high level weapons.
+              </p>
+              ===Items===
+              <ul>
+                <li>Removed no drop on Jack o Lantern blade, gave small blade req of 65</li>
+                <li>Typo in druid staff summoning wyverns</li>
+                <li>Fix for tooltip of raider poisoned short sword</li>
+                <li>Adjusted level req of following high level weapons:</li>
+                <ul>
+                  <u>108</u>
+                  <li>Sword of Agon's Fervor</li>
+                  <li>Spell Slinger</li>
+                  <li>Necromancers channel</li>
+                  <li>Staff of Prismatic Waves</li>
+                  <li>Northern Cleric's Staff</li>
+                  <li>Northern Wizard's Staff</li>
+                  <u>107</u>
+                  <li>The laughing blade</li>
+                  <li>Spearslinger Crossbow</li>
+                  <li>Thirsty Blade</li>
+                  <li>Warmage's Fury</li>
+                  <li>Bow of Terror</li>
+                  <li>Sling of Nature's Wrath</li>
+                </ul>
+                <u>106</u>
+                <ul>
+                  <li>Ghoul Blade</li>
+                  <li>Battleblood Axe</li>
+                  <li>Thrakk's Tribute</li>
+                  <li>Wyvern's Tooth</li>
+                  <li>Glaive of Contagion</li>
+                  <li>Bow of Karkening Skies</li>
+                </ul>
+                <u>105</u>
+                <ul>
+                  <li>Claws of the Northern Wastes</li>
+                  <li>Crossbow of the Northern Wastes</li>
+                  <li>Druid's Staff</li>
+                  <li>Gloves of the Giantess</li>             
+                  <li>Infectious Voulge</li>
+                </ul>
+              </ul>
+           ===Creatures===
+           <ul>
+            <li>Crystal Guardians now ethereal, social with pallus</li>
+            <li>Adjusted summoned wyvern to lose ranged attack and gain 3 radius melee attack instead, will still cast</li>
+           </ul>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 10/21/2022</small>
               <p>
                A small patch to further refine the Halloween event for more fun! Remember this event is onpen through the end of October untill All Saint's Day on NOV 1st. Candy Corn can be saved for next year as well.
