Added November Grab Bag

--- a/index.html
+++ b/index.html
@@ -4164,10 +4164,11 @@
                       <div id="november2022" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>2 Item Rename</li>
+                                <li>2 Berserker Potion Pack</li>
+                                <li>1 Item NO-DROP</li>
+                                <li>1 Rune Shard</li>
+                                <li>1 Dragon Mask Pack</li>
                             </ul>
                         </div>
                       </div>
